# Listen.TUI

./: .gitignore  README.md  pyproject.toml  test.py
listentui/: __main__.py  app.py
listentui/app/: __init__.py  app.py
listentui/data/: __init__.py  config.py
listentui/listen/: __init__.py  client.py  interface.py  types.py
listentui/pages/: base.py  history.py  home.py  mpvplayer.py  player.py  profile.py  search.py  setting.py  user.py
listentui/screen/: __init__.py  login.py  main.py  modal.py
listentui/utilities/: __init__.py  logger.py
listentui/widgets/: __init__.py  buttons.py  custom.py  dataTables.py  durationProgressBar.py  history.py  mpvThread.py  mpvplayer.py  pageSwitcher.py  player.py  profileTabs.py  scrollableLabel.py  search.py  setting.py  songContainer.py  songListView.py  topbar.py  user.py  vanityBar.py  websocket.py
